# xai-sandbox

./: .gitignore  data.dvc  main.py  pyproject.toml
.dvc/: config
quick_test/: aix360.ipynb  time_interpret.ipynb
work/: matrix.py
work/bee_anomaly/: vis.ipynb
work/lake/: main.py  vis.ipynb
work/load/: custom.py  main.py  vis.ipynb
work/load/output/: mm118648_artifacts.joblib  mm125431_artifacts.joblib  mm144644_artifacts.joblib  mm148296_artifacts.joblib  mm166942_artifacts.joblib  mm182972_artifacts.joblib  mm187195_artifacts.joblib  mm199762_artifacts.joblib  mm254_artifacts.joblib  mm3371_artifacts.joblib  mm41865_artifacts.joblib  mm45674_artifacts.joblib  mm4678_artifacts.joblib  mm57710_artifacts.joblib  mm65924_artifacts.joblib  mm72425_artifacts.joblib  mm79158_artifacts.joblib  mm9725_artifacts.joblib  results.joblib  results_custom.joblib
work/load/output/mm118648/: artifacts.joblib
work/load/output/mm125431/: artifacts.joblib
work/load/output/mm144644/: artifacts.joblib
work/load/output/mm148296/: artifacts.joblib
work/load/output/mm166942/: artifacts.joblib
work/load/output/mm182972/: artifacts.joblib
work/load/output/mm187195/: artifacts.joblib
work/load/output/mm199762/: artifacts.joblib
work/load/output/mm254/: artifacts.joblib
work/load/output/mm3371/: artifacts.joblib
work/load/output/mm41865/: artifacts.joblib
work/load/output/mm45674/: artifacts.joblib
work/load/output/mm4678/: artifacts.joblib
work/load/output/mm57710/: artifacts.joblib
work/load/output/mm65924/: artifacts.joblib
work/load/output/mm72425/: artifacts.joblib
work/load/output/mm79158/: artifacts.joblib
work/load/output/mm9725/: artifacts.joblib
work/queen_presence/: lr_rms.py  lr_spec.py  lr_ts.py  neural.py  vis.ipynb
work/queen_presence/output/: shapelet_model.joblib  shapelet_spectro_bands_model.joblib
work/sp500/: main.py  vis.ipynb
work/sp500/output/: results.joblib
work/stocks/: main.py  vis.ipynb
