[project]
name = "xai-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.64.1",
    "dvc-s3>=3.2.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["work*"]

[project.scripts]
sound_lr = "work.queen_presence.lr_ts:main"
