[project]
name = "xai-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aix360",
    "captum>=0.7.0",
    "dvc>=3.64.1",
    "dvc-s3>=3.2.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "librosa>=0.11.0",
    "lime",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyod>=2.0.6",
    "scikit-learn>=1.7.2",
    "stumpy>=1.13.0",
    "torch>=2.9.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.uv.sources]
aix360 = { git = "https://github.com/Trusted-AI/AIX360.git" }

[tool.setuptools.packages.find]
where = ["."]
include = ["work*"]

[project.scripts]
sound_rms = "work.queen_presence.lr_rms:main"
sound_spec = "work.queen_presence.lr_spec:main"
sound_nn = "work.queen_presence.neural:main"
lake = "work.lake.main:main"
load = "work.load.main:main"
sp500 = "work.sp500.main:main"
